<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.auth.ForgotPasswordFragment">

    <TextView
        android:id="@+id/tv_forgot_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/forgot_password_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_forgot_password_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/forgot_password_description"
        android:textColor="@color/grey_700"
        android:textSize="14sp"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_background"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_email_label_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/email_label"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/et_background"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textAppearance="@style/TextAppearance.App.Hint"
            android:textColorHint="@color/grey_500" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_primary_background"
            app:backgroundTint="@null"
            android:fontFamily="@font/inter_regular"
            android:text="@string/reset_password_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="?attr/colorSecondary" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/inter_regular"
        android:text="@string/back_to_login"
        android:textColor="@color/primary_700"
        android:textSize="14sp" />

</LinearLayout>